Add responsive preview.

--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "types"
   ],
   "scripts": {
-    "build": "npm run build:css && npm run build:js",
+    "build": "yarn build:css && yarn build:js",
     "build:css": "postcss src/index.css -o dist/cropper.css --no-map",
     "build:js": "rollup -c",
     "clean": "del-cli dist",
-    "compress": "npm run compress:css && npm run compress:js",
+    "compress": "yarn compress:css && yarn compress:js",
     "compress:css": "postcss dist/cropper.css -u cssnano -o dist/cropper.min.css --no-map",
     "compress:js": "uglifyjs dist/cropper.js -o dist/cropper.min.js -c -m --comments /^!/",
     "copy": "cpy dist/cropper.css docs/css",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint": "yarn lint:js && yarn lint:css",
     "lint:css": "stylelint {src,docs,examples}/**/*.{css,scss,html} --fix",
     "lint:js": "eslint src test *.js --fix",
     "prepare": "husky install",
-    "release": "npm run clean && npm run lint && npm run build && npm run compress && npm run copy && npm test",
+    "release": "yarn clean && yarn lint && yarn build && yarn compress && yarn copy && yarn test",
     "start": "npm-run-all --parallel watch:*",
     "test": "karma start",
     "test:coverage": "cat coverage/lcov.info | codecov",
